z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ dl, dd, dt{
 
 .legend-container {
   width: 470px;
-  z-index: 10000;
+  z-index: 100;
   text-align: center;
   /*height: 500px;*/
   font-size: 18px;
@@ -340,7 +340,7 @@ dl, dd, dt{
   position: fixed;
   width: 820px;
 
-  z-index: 10000;
+  z-index: 100;
   text-align: center;
   /*height: 500px;*/
   font-size: 18px;
@@ -437,7 +437,7 @@ dl, dd, dt{
 .filter-section {
   padding-top:5px;
   display: block;
-  z-index: 400000000000000;
+  z-index: 10;
   text-align: center;
   position: fixed;
   left: 40%;
